--- a/css/main.css
+++ b/css/main.css
@@ -12,40 +12,36 @@ body {
   height: 100%;
   margin: 0;
   color: white;
-  font-family: "Segoe UI", sans-serif;
-  font-weight: lighter;
-  font-size: 14px;
+  font-family: "Segoe UI Light", sans-serif;
 }
 .av {
     border-radius: 360px;
     box-shadow: 0 0 75px black;
+	style="padding-top: 10%;"
 }
 
 h1{
-  font-family: "Segoe UI", sans-serif;
-  font-weight: lighter;
-  font-size: 36px;
+  font-family: "Segoe UI Light", sans-serif;
+  color: white;
 }
 button {
-  font-family: "Segoe UI", sans-serif;
-  font-size: 14px;
+  font-family: "Segoe UI Light", sans-serif;
 }
 
-.btn {
+.mbtn {
   color: white;
   background-color: transparent;
   border: 1px solid white;
-  
   padding: 6.25px 15px;
   transition: all 0.3s cubic-bezier(0.1, 0.9, 0.2, 1);
   outline: none;
 }
 
-.btn:hover {
+.mbtn:hover {
   background-color: #0078d4;
   border: 1px solid #0078d4;
 }
 
-.btn:active {
+.mbtn:active {
   background-color: #005ba1;
 }
