--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100&display=swap');
 body::before {
     content: '';
     position: fixed; 
@@ -18,7 +18,7 @@ body::before {
     left: 50%;
     transform: translate(-50%, -50%);
 	position: relative;
-	font-family: 'Nunito', sans-serif;
+	font-family: 'Fira Sans', sans-serif;
 	font-weight: lighter;
 	font-size: 48px;
 }
@@ -26,7 +26,7 @@ body {
   height: 100%;
   margin: 0;
   color: white;
-  font-family: 'Nunito', sans-serif;
+  font-family: 'Fira Sans', sans-serif;
   font-weight: lighter;
   font-size: 24px;
 }
@@ -39,11 +39,11 @@ body {
 	button{
 		width: 8%;
 		height: 5%;
-		font-family: 'Nunito', sans-serif; font-size: 24px;
+		font-family: 'Fira Sans', sans-serif; font-size: 24px;
 	}
 }
 button {
-  font-family: 'Nunito', sans-serif; font-size: 16px;
+  font-family: 'Fira Sans', sans-serif; font-size: 16px;
 }
 
 .btn {
